fixed weird search icon alignment issue in Safari, refs#97

--- a/app/styles/components/_searchbox.scss
+++ b/app/styles/components/_searchbox.scss
@@ -19,6 +19,7 @@
     @include position(absolute, 0);
     background-color: transparent;
     color: $base-button-color;
+    text-align: left;
 
     img {
       opacity: .7;
